other new ciommiytdslfjvhosugdf swadvadf

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,7 +14,7 @@ sonar.language=js
 sonar.sourceEncoding=UTF-8
 
 # SonarQube server
-sonar.host.url=http://sonarqube.imcc.com/
+sonar.host.url=http://my-sonarqube-sonarqube.sonarqube.svc.cluster.local:9000
 
 # Token
 sonar.token=sqp_e02c3cd72ed1f9c384e571a64f298437fcd4af45
