--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401042/bionexa-backend:latest
+          image:127.0.0.1:30085/2401042/bionexa-backend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
