--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,26 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: bionexa-backend
+  name: face-detection-service
+  namespace: "2401199"
 spec:
   selector:
-    app: bionexa-backend
+    app: face-detection
   ports:
-    - name: http
-      port: 5000
-      targetPort: 5000
+    - protocol: TCP
+      port: 8000
+      targetPort: 8000
   type: ClusterIP
 ---
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress
 metadata:
-  name: bionexa-frontend
+  name: face-detection-ingress
+  namespace: "2401199"
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  selector:
-    app: bionexa-frontend
-  ports:
-    - name: http
-      port: 80
-      targetPort: 80
-  type: LoadBalancer
+  ingressClassName: nginx
+  rules:
+    - host: face.imcc.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: face-detection-service
+                port:
+                  number: 8000
 
