--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bionexa-backend
+  namespace: "2401042"
 spec:
   replicas: 2
   selector:
@@ -41,6 +42,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bionexa-frontend
+  namespace: "2401042"
 spec:
   replicas: 2
   selector:
