--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -63,4 +63,10 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 80
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 5
+            periodSeconds: 5
 
