fix imagePullSecret to use http:// and make firebase secret optional

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -39,6 +39,7 @@ spec:
         - name: firebase-service-account
           secret:
             secretName: firebase-service-account
+            optional: true
 ---
 apiVersion: apps/v1
 kind: Deployment
