use 127.0.0.1:30085 NodePort for Nexus registry like friend's setup

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: nexus-secret
       containers:
         - name: backend
-          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/bionexa-backend:v1
+          image: 127.0.0.1:30085/bionexa_kanishk/bionexa-backend:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
@@ -60,7 +60,7 @@ spec:
         - name: nexus-secret
       containers:
         - name: frontend
-          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/bionexa-frontend:v1
+          image: 127.0.0.1:30085/bionexa_kanishk/bionexa-frontend:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 80
